bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_duplicate_error_attr.rs
use macbat::Error;
#[derive(Error)]
enum E {
    #[error("a")]
    #[error("b")]
    A,
}
fn main() {}
